# Rune

./: .gitignore  README.md  pyproject.toml
rune/: __init__.py  cli.py
rune/agent/: context.py  loop.py
rune/config/: settings.py
rune/llm/: client.py  models.py  streaming.py
rune/safety/: permissions.py
rune/tools/: base.py  bash.py  edit_file.py  glob_tool.py  grep_tool.py  read_file.py  write_file.py
rune/ui/: renderer.py
tests/: test_context.py  test_streaming.py  test_tools.py
